--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^5.1.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax-tilt": "^1.7.173",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.0",
     "typescript": "^4.4.2",
