--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-scroll": "^1.8.10",
     "@types/styled-components": "^5.1.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.173",
+    "react-particles": "^2.12.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.0",
+    "tsparticles": "^2.12.0",
     "typescript": "^4.4.2",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.0"
