--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -13,6 +14,7 @@
     "@types/react-scroll": "^1.8.10",
     "@types/styled-components": "^5.1.29",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.6",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.173",
     "react-particles": "^2.12.2",
